--- a/translations/kangyur/translations/001-002_toh1-2-chapter_2_on_the_restoration_site.xml
+++ b/translations/kangyur/translations/001-002_toh1-2-chapter_2_on_the_restoration_site.xml
@@ -29,7 +29,7 @@
                 <sponsor xml:id="UT22084-001-002-17987">Dakki</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -172,6 +172,9 @@
                 </change>
                 <change who="#john" when="2024-10-19T08:42:27.385Z" type="text-version" status="1.0.3" xml:id="UT22084-001-002-17990">
                     <desc>Corrections to one note.</desc>
+                </change>
+                <change who="#john" when="2024-10-23T18:44:10.733Z" type="text-version" status="1.0.4" xml:id="UT22084-001-002-17991">
+                    <desc>Further edits to passages paralleled in Toh 1-3.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -2624,8 +2627,8 @@
                         <milestone unit="chunk" xml:id="UT22084-001-002-611"/>
                         <p tid="365">“They will be guilty of a breach if the monk receiving the profession of purity follows the rules of customary
                             conduct but his profession is not accepted after being properly received.”</p>
-                        <milestone unit="chunk" xml:id="UT22084-001-002-612"/>
                         <lb/>
+                        <milestone unit="chunk" xml:id="UT22084-001-002-612"/>
                         <p tid="367">The venerable Upāli asked the Blessed Buddha, “Honorable One, if the monk who has received a profession of purity
                             comes to an end and dies on that very place after receiving a profession of purity, has the profession of purity been
                             received or not?”</p>
@@ -2635,7 +2638,7 @@
                         <p tid="369">“If the monk who has received a profession of purity<note place="end" xml:id="UT22084-001-002-6151">The words 
                             “the monk who has received a profession of purity” have been added to the translation here, and in paragraphs 
                             <ptr target="#UT22084-001-002-621"/> and <ptr target="#UT22084-001-002-626"/> below, to make the questions clear.</note>  
-                            makes an oath professing to be a householder, or makes an oath he is a novice, or if he is a person who
+                            makes an oath professing to be a householder, or makes an oath that he is a novice, a person who
                             has undergone castration, a person labeled a paṇḍaka, someone who has violated a nun, a matricide, a patricide, someone
                             who has killed an arhat, someone who has caused a schism in the saṅgha, someone who has maliciously drawn blood from a
                             tathāgata, a tīrthika, a convert to a tīrthika order, <ref cRef="F.151.a" type="folio" xml:id="UT22084-001-002-1884"/>
@@ -2652,7 +2655,8 @@
                         <milestone unit="chunk" xml:id="UT22084-001-002-620"/>
                         <p tid="373">“Upāli, it has not been received and should be received again.” </p>
                         <milestone unit="chunk" xml:id="UT22084-001-002-621"/>
-                        <p tid="374">“If the monk who has received a profession of purity makes an oath professing he is a householder, or makes an oath he is a novice, or if he is a person who
+                        <p tid="374">“If the monk who has received a profession of purity makes an oath professing he is a 
+                            householder, or makes an oath that he is a novice, a person who
                             has undergone castration, a person labeled a paṇḍaka, someone who has violated a nun, a matricide, a patricide, someone
                             who has killed an arhat, someone who has caused a schism in the saṅgha, someone who has maliciously drawn blood from a
                             tathāgata, a tīrthika, a convert to a tīrthika order, someone living under false pretenses, someone outside the common
@@ -2672,8 +2676,9 @@
                                 profession.</note>
                         </p>
                         <milestone unit="chunk" xml:id="UT22084-001-002-626"/>
-                        <p tid="378">“[Honorable One,] if the monk who has received a profession of purity makes an oath professing he is a householder, or makes an oath he is a novice, or if he
-                            is a person who has undergone castration, a person labeled a paṇḍaka, someone who has violated a nun, a matricide, a
+                        <p tid="378">“[Honorable One,] if the monk who has received a profession of purity makes an oath 
+                            professing he is a householder, or makes an oath that he is a novice, 
+                            a person who has undergone castration, a person labeled a paṇḍaka, someone who has violated a nun, a matricide, a
                             patricide, someone who has killed an arhat, someone who has caused a schism in the saṅgha, someone who has maliciously
                             drawn blood from a tathāgata, a tīrthika, a convert to a tīrthika order, someone living under false pretenses, someone
                             outside the common living, or someone denied the common living, <ref cRef="F.151.b" type="folio" xml:id="UT22084-001-002-1885"/> has the profession of purity been received or not?” </p>
@@ -2863,7 +2868,7 @@
                         <p tid="415">“Upāli, they have been received and should not be received again.” </p>
                         <milestone unit="chunk" xml:id="UT22084-001-002-669"/>
                         <p tid="416">“If the monk receiving consent and a profession of purity makes an oath 
-                            consenting to and professing to being a householder, or makes an oath that he is a novice, or
+                            consenting to and professing to being a householder, or makes an oath that he is a novice, 
                             a person who has undergone castration, a person labeled a paṇḍaka, someone who has violated a nun, a matricide, a
                             patricide, someone who has killed an arhat, someone who has caused a schism in the saṅgha, someone who has maliciously
                             drawn blood from a tathāgata, a tīrthika, a convert to a tīrthika order, a person living under false pretenses, <ref cRef="F.154.b" type="folio" xml:id="UT22084-001-002-1891"/> someone who is outside the common living, or someone who
@@ -6582,16 +6587,16 @@
                                         come,</l>
                                 <l>Overcoming evil views without being snared.</l>
                                     </lg>
-                            <p>Translated by the Kāśmirī preceptor
+                                <p>Translated by the Kāśmirī preceptor
                                     Sarvajñādeva, the Indian preceptor Vidyākāraprabha, the Kāśmirī preceptor Dharmākāra, and the translator and monk
                                     Palgyi Lhunpo. The Indian preceptor Vidyākāraprabha and the chief editor of translations, the monk Paltsek,
                                     retranslated and proofed the text before settling upon the final version.</p>
-                            <lg>
+                                <lg>
                                         <l>The Buddha said that acceptance
                                         is the supreme hardship, acceptance is the supreme nirvāṇa.</l>
                                     <l>One who harms other renunciants and does violence to them is not an ascetic.</l>
                                     </lg>
-                                    <p>
+                                <p>
                                         <foreign xml:lang="Sa-Ltn" type="quote">ye dharmā hetuprabhavā hetuṃ teṣāṃ tathāgata uvāca, teṣāṃ ca yo nirodha
                                             evaṃvadī mahāśramaṇaḥ</foreign>
                                     </p>
