--- a/translations/kangyur/translations/001-003_toh1-3-chapter_3_on_lifting_restrictions.xml
+++ b/translations/kangyur/translations/001-003_toh1-3-chapter_3_on_lifting_restrictions.xml
@@ -27,7 +27,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-001-003-634">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -147,6 +147,9 @@
                 </change>
                 <change who="#john" when="2024-10-23T18:47:23.343Z" type="text-version" status="1.0.0" xml:id="UT22084-001-003-4654">
                     <desc>User set version to 1.0.0</desc>
+                </change>
+                <change who="#john" when="2024-10-23T18:50:39.829Z" type="text-version" status="1.0.1" xml:id="UT22084-001-003-4655">
+                    <desc>User set version to 1.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
