--- a/translations/kangyur/placeholders/088-013_toh519,979-the_incantation_the_essence_of_dependent_arising.xml
+++ b/translations/kangyur/placeholders/088-013_toh519,979-the_incantation_the_essence_of_dependent_arising.xml
@@ -11,15 +11,16 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rten cing 'brel bar 'byung ba'i snying po'i cho ga'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rten 'brel snying po'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rten cing 'brel par 'byung ba'i snying po'i cho ga'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-088-013-1"/>
+                <author role="translatorMain" xml:id="UT22084-088-013-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-013-2">Bruno Galasek-Hul</author>
+                <editor role="projectEditor" xml:id="UT22084-088-013-14">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-088-013"/>
                 <date/>
             </publicationStmt>
@@ -70,6 +71,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-05T13:50:11.732Z" type="text-version" status="0.0.6" xml:id="UT22084-088-013-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T13:50:44.737Z" type="text-version" status="0.0.7" xml:id="UT22084-088-013-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-24T08:38:12.215Z" type="translation-status" status="2.f" xml:id="UT22084-088-013-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-24T08:38:12.215Z" type="text-version" status="0.0.8" xml:id="UT22084-088-013-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
