--- a/translations/kangyur/placeholders/088-036_toh541,931-the_incantation_for_deliverance_from_the_eight_types_of_fear.xml
+++ b/translations/kangyur/placeholders/088-036_toh541,931-the_incantation_for_deliverance_from_the_eight_types_of_fear.xml
@@ -8,20 +8,21 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">Aṣṭamahābhayatārānī dhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">'jigs brgyad sgrol ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryāṣṭamahābhayatāraṇīnāmadhāraṇī</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Āryāṣṭamahābhayatārānīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Aṣṭamahābhayatāraṇī dhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryāṣṭamahābhayatārānīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa 'jigs pa chen po brgyad las sgrol ba zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'jigs brgyad sgrol pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa 'jigs pa chen po brgyad las sgrol pa zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-088-036-1"/>
+                <author role="translatorMain" xml:id="UT22084-088-036-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-036-2">Lowell Cook</author>
+                <editor role="projectEditor" xml:id="UT22084-088-036-14">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-088-036"/>
                 <date/>
             </publicationStmt>
@@ -72,6 +73,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-05T13:52:25.475Z" type="text-version" status="0.0.6" xml:id="UT22084-088-036-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T13:53:07.518Z" type="text-version" status="0.0.7" xml:id="UT22084-088-036-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-24T08:43:10.012Z" type="translation-status" status="2.f" xml:id="UT22084-088-036-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-24T08:43:10.012Z" type="text-version" status="0.0.8" xml:id="UT22084-088-036-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
