--- a/translations/kangyur/translations/001-003_toh1-3-chapter_3_on_lifting_restrictions.xml
+++ b/translations/kangyur/translations/001-003_toh1-3-chapter_3_on_lifting_restrictions.xml
@@ -27,7 +27,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-001-003-634">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -46,7 +46,7 @@
                     </licence>
                 </availability>
                 <idno xml:id="UT22084-001-003"/>
-                <date>2024-09-23</date>
+                <date>2024-10-23</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1-3" type="chapter">
@@ -152,6 +152,9 @@
                     <desc>User set version to 1.0.1</desc>
                 </change>
                 <change who="#john" when="2024-10-24T10:02:24.035Z" type="text-version" status="1.0.2" xml:id="UT22084-001-003-4656">
+                    <desc>Some minor additional revisions made.</desc>
+                </change>
+                <change who="#john" when="2024-10-24T10:03:44.38Z" type="text-version" status="1.0.3" xml:id="UT22084-001-003-4657">
                     <desc>Some minor additional revisions made.</desc>
                 </change>
             </revisionDesc>
