--- a/translations/kangyur/placeholders/091-031_toh634,874-the_incantation_of_the_one_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/091-031_toh634,874-the_incantation_of_the_one_hundred_and_eight_names_of_avalokitesvara.xml
@@ -21,11 +21,11 @@
                 <consultant role="advisor" xml:id="UT22084-091-031-13">Channa Li</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-091-031"/>
                 <date/>
             </publicationStmt>
@@ -79,6 +79,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-07T09:30:30.973Z" type="text-version" status="0.0.7" xml:id="UT22084-091-031-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-24T10:32:15.79Z" type="translation-status" status="2.g" xml:id="UT22084-091-031-18">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-24T10:32:15.79Z" type="text-version" status="0.0.8" xml:id="UT22084-091-031-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
