--- a/translations/kangyur/translations/072-034_toh334-the_sutra_of_nandika.xml
+++ b/translations/kangyur/translations/072-034_toh334-the_sutra_of_nandika.xml
@@ -22,7 +22,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-072-034-39">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -146,6 +146,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-10-18T13:27:14.205Z" type="text-version" status="1.0.0" xml:id="UT22084-072-034-278">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#andre" when="2024-10-24T11:22:38.819Z" type="text-version" status="1.0.1" xml:id="UT22084-072-034-279">
+                    <desc>Glossary matching revised, activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -1064,7 +1067,7 @@
                         Kyoto: Ryukoku University, 1950.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded" xml:id="UT22084-072-034-glossary">
+            <div type="glossary" xml:id="UT22084-072-034-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-072-034-183">
@@ -1308,11 +1311,11 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-072-034-205">
-                            <term type="translationMain">Tathāgata</term>
-                            <term xml:lang="Bo-Ltn" n="1">de bzhin gshegs pa </term>
-                            <term xml:lang="bo" n="1">དེ་བཞིན་གཤེགས་པ།</term>
-                            <term type="attestedSource" xml:lang="Sa-Ltn">tathāgata</term>
+                        <gloss xml:id="UT22084-072-034-205" type="term" mode="match">
+                            <term type="translationMain">tathāgata</term>
+                            <term xml:lang="Sa-Ltn" type="attestedSource">tathāgata</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">de bzhin gshegs pa</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">དེ་བཞིན་གཤེགས་པ།</term>
                         </gloss>
                     </item>
                     <item>
