--- a/translations/kangyur/translations/071-013_toh299-the_sutra_on_timings_for_the_gandhi.xml
+++ b/translations/kangyur/translations/071-013_toh299-the_sutra_on_timings_for_the_gandhi.xml
@@ -17,7 +17,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-071-013-121">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -142,6 +142,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-10-17T14:34:18.562Z" type="text-version" status="1.0.0" xml:id="UT22084-071-013-124">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#andre" when="2024-10-24T11:40:06.863Z" type="text-version" status="1.0.1" xml:id="UT22084-071-013-125">
+                    <desc>Glossary matching revised, activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -449,7 +452,7 @@
             </div>
             <div type="appendix" xml:id="UT22084-071-013-appendix">
                 <head type="appendix" tid="41">Appendix</head>
-                <div type="section" xml:id="UT22084-071-013-appendix-1">
+                <div type="section" xml:id="UT22084-071-013-appendix-1" prefix="1">
                     <table tid="42">
                         <row>
                             <cell>Time of Year</cell>
@@ -579,7 +582,7 @@
                     </table>
                 </div>
             </div>
-            <div type="glossary" status="excluded" xml:id="UT22084-071-013-glossary">
+            <div type="glossary" xml:id="UT22084-071-013-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-071-013-91">
