--- a/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
+++ b/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-066-011-4">Norbu Samphel </author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-066-011"/>
                 <date/>
             </publicationStmt>
@@ -73,6 +73,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-19T07:10:09.46Z" type="text-version" status="0.0.8" xml:id="UT22084-066-011-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-24T12:41:02.312Z" type="translation-status" status="2.g" xml:id="UT22084-066-011-18">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-24T12:41:02.312Z" type="text-version" status="0.0.9" xml:id="UT22084-066-011-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
