--- a/translations/kangyur/placeholders/088-023_toh529,888-the_great_incantation.xml
+++ b/translations/kangyur/placeholders/088-023_toh529,888-the_great_incantation.xml
@@ -9,17 +9,18 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">gzungs chen po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryamahādhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gzungs chen po/</title>
-                <author role="translatorMain" xml:id="UT22084-088-023-1"/>
+                <author role="translatorMain" xml:id="UT22084-088-023-1">Buddhapīṭha Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-088-023-2">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-088-023-3">Péter-Dániel Szántó</author>
                 <consultant role="projectManager" xml:id="UT22084-088-023-4">Péter-Dániel Szántó</consultant>
+                <editor role="projectEditor" xml:id="UT22084-088-023-22">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-088-023"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +83,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-05T13:51:14.884Z" type="text-version" status="0.0.9" xml:id="UT22084-088-023-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T13:51:50.156Z" type="text-version" status="0.0.10" xml:id="UT22084-088-023-23">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-24T12:55:21.426Z" type="translation-status" status="2.f" xml:id="UT22084-088-023-24">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-24T12:55:21.426Z" type="text-version" status="0.0.11" xml:id="UT22084-088-023-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
