--- a/translations/kangyur/translations/001-003_toh1-3-chapter_3_on_lifting_restrictions.xml
+++ b/translations/kangyur/translations/001-003_toh1-3-chapter_3_on_lifting_restrictions.xml
@@ -27,7 +27,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-001-003-634">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -157,6 +157,9 @@
                 <change who="#john" when="2024-10-24T10:03:44.38Z" type="text-version" status="1.0.3" xml:id="UT22084-001-003-4657">
                     <desc>Some minor additional revisions made.</desc>
                 </change>
+                <change who="#john" when="2024-10-24T19:17:18.508Z" type="text-version" status="1.0.4" xml:id="UT22084-001-003-4658">
+                    <desc>Further minor edits.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -259,9 +262,11 @@
                 </tei:div>
                     <tei:div type="section" xml:id="UT22084-001-003-introduction-1-1">
                         <head type="section" tid="286">Structure and Contents</head>
+                        <milestone unit="chunk" xml:id="UT22084-001-003-781"/>
                         <p tid="290">Like the other chapters of <title xml:lang="en">The Chapters on Monastic Discipline</title>, 
-                            <title xml:lang="en">The Chapter on the Lifting Restrictions</title> starts with a “global summary” 
-                            or <foreign xml:lang="Sa-Ltn">piṇḍoddāna</foreign>. In this case, the global summary groups the 
+                            <title xml:lang="en">The Chapter on Lifting Restrictions</title> starts with a “global summary” 
+                            or <foreign xml:lang="Sa-Ltn">piṇḍoddāna</foreign>.<note place="end" xml:id="UT22084-001-003-782">But 
+                                see <ptr target="#UT22084-001-003-126"/>.</note> In this case, the global summary groups the 
                             contents of the text into five sections. The first section sets out the procedures by which restrictions 
                             are lifted, and the remaining four describe the contingencies that may bear on how the rite is performed.</p>
                         <tei:div type="section" xml:id="UT22084-001-003-introduction-1-2">
@@ -271,7 +276,7 @@
                             opens with a <foreign xml:lang="Sa-Ltn" type="term">nidāna</foreign>, or “narrative introduction” in which
                             we learn the reputed origins of the rite of lifting restrictions. We
                             join the Buddha as he is making a pledge to pass the rainy season at
-                            Prince Jeta’s Grove. Elsewhere, somewhere off in the countryside, a
+                            Prince Jeta’s Grove, Anāthapiṇḍada’s Park in Śrāvastī. Elsewhere, somewhere off in the countryside, a
                             group of monks pledge to spend the rains at a site some days’ distance.
                             These monks adopt a rule of silence, and under the conditions of this ad
                             hoc agreement, the monks have neither discussed nor thought about the
@@ -512,7 +517,7 @@
                             male-gendered terms for female ones.<note place="end" xml:id="UT22084-001-003-105"> See Tib. <foreign xml:lang="Bo-Ltn" type="quote">skyes pa’i cho ga nyid bud med la kha spo ba dogs
                                     gsal dang bcas pa</foreign> and <foreign xml:lang="Bo-Ltn" type="quote">sngar skyes pa’i rab byung bsnyen rdzogs kyi cho
                                     gar bstan pa de nyid bud med la ’don pa spo ba</foreign>,
-                                respectively, in Butön, vol. 21, F.59.b.1 (p. 258)].</note> In the case of the rites of
+                                respectively, in Butön, vol. 21, F.59.b.1 (p. 258).</note> In the case of the rites of
                             restoration, lifting restrictions, and pledging to settle for the rains,
                             those pronouns are easily swapped in contemporary Tibetan practice,
                             while textually, <title xml:lang="en">The Chapter on Lifting
@@ -643,10 +648,11 @@
                     <p tid="44">
                         <ref cRef="F.221.b" type="folio" xml:id="UT22084-001-003-558"/>A
                         global summary<note place="end" xml:id="UT22084-001-003-126"> Here, in place
-                            of the usual translation <foreign xml:lang="Bo-Ltn" type="term">spyi
+                            of the usual Tibetan translation <foreign xml:lang="Bo-Ltn" type="term">spyi
                                 sdom</foreign>, or “global summary,” the Tibetan reads <foreign xml:lang="Bo-Ltn" type="term">bsdus pa’i sdom</foreign>, or
-                            “inclusive summary.” The Sanskrit for this is not extant but <foreign xml:lang="Bo-Ltn" type="term">bsdus pa’i sdom</foreign> presumably
-                            translates the Skt. <foreign xml:lang="Sa-Ltn" type="term">piṇḍoddāna</foreign>, or “global summary.” </note> of<title xml:lang="en"> The Chapter on Lifting Restrictions</title>:<note place="end" xml:id="UT22084-001-003-127"> The extant Sanskrit fragments
+                            “inclusive summary.” The Sanskrit for this is not extant but <foreign xml:lang="Bo-Ltn" type="term">bsdus pa’i sdom</foreign>
+                            is presumably an alternative Tibetan translation of the Skt. <foreign xml:lang="Sa-Ltn" type="term">piṇḍoddāna</foreign>, 
+                            or “global summary.” </note> of<title xml:lang="en"> The Chapter on Lifting Restrictions</title>:<note place="end" xml:id="UT22084-001-003-127"> The extant Sanskrit fragments
                             do not begin until <ptr target="#UT22084-001-003-232"/> (F.225.b). See
                             the Table of Concordance (p. 49) in Chung 1998. The root text
                             cited by Kalyāṇamitra in his commentary diverges at several points from
