--- a/translations/kangyur/translations/043-013_toh76-asokadattas_prophecy.xml
+++ b/translations/kangyur/translations/043-013_toh76-asokadattas_prophecy.xml
@@ -31,7 +31,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-043-013-529">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -39,7 +39,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -181,6 +181,12 @@
                 <change who="#martina-cotter" when="2024-10-18T14:55:33.855Z" type="text-version" status="1.0.2" xml:id="UT22084-043-013-3340">
                     <desc>Typo "prophesies."</desc>
                 </change>
+                <change who="#sameer" when="2024-10-25T06:49:56.269Z" type="translation-status" status="1" xml:id="UT22084-043-013-3341">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-10-25T06:49:56.269Z" type="text-version" status="1.0.3" xml:id="UT22084-043-013-3342">
+                    <desc>Included in App v 3.18</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -309,8 +315,7 @@
                                 <ref target="http://read.84000.co/translation/toh170.html">The
                                     Questions of Śrīmatī the Brahmin Woman</ref>
                             </title> (<title xml:lang="Sa-Ltn">Śrīmatī­brāhmaṇī­pari­pṛcchā</title>, Toh
-                            170).</note> and <title xml:lang="en">The Girl Candrottarā’s
-                            Prophecy</title> (<title xml:lang="Sa-Ltn">Candrottarādāri­kāvyākaraṇa</title>, Toh 191).<ref rend="pending" target="http://read.84000.co/translation/toh191.html"/> Laywomen of
+                                170).</note> and <title xml:lang="en">The Prophecy of the Girl Candrottarā</title> (<title xml:lang="Sa-Ltn">Candrottarādāri­kāvyākaraṇa</title>, Toh 191).<ref rend="pending" target="http://read.84000.co/translation/toh191.html"/> Laywomen of
                         lesser social status who are likewise prophesied to achieve awakening are
                         the main interlocutors in <title xml:lang="en">The Questions of the Girl
                             Sumati</title> (<title xml:lang="Sa-Ltn">Sumatidārikā­pari­pṛcchā</title>, Toh 74),<ref rend="pending" target="http://read.84000.co/translation/toh74.html"/> <title xml:lang="en">The Questions of Gaṅgottarā</title> (<title xml:lang="Sa-Ltn">Gaṅgottara­pari­pṛcchā</title>, Toh 75),<note place="end" xml:id="UT22084-043-013-500">
