--- a/translations/kangyur/translations/071-007_toh293-the_mahasutra_the_crest_insignia_(2).xml
+++ b/translations/kangyur/translations/071-007_toh293-the_mahasutra_the_crest_insignia_(2).xml
@@ -22,7 +22,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-071-007-168">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -30,7 +30,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
                     initiative to translate all the Buddha’s words into modern languages, and to make them
                     available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -180,6 +180,12 @@
                 </change>
                 <change who="#martina-cotter" when="2024-10-15T17:03:23.966Z" type="text-version" status="1.0.3" xml:id="UT22084-071-007-1507">
                     <desc>activated pending links</desc>
+                </change>
+                <change who="#sameer" when="2024-10-25T14:13:00.099Z" type="translation-status" status="1" xml:id="UT22084-071-007-1508">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-10-25T14:13:00.099Z" type="text-version" status="1.0.4" xml:id="UT22084-071-007-1509">
+                    <desc>Included in App v 3.18</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
