--- a/translations/kangyur/translations/072-027_toh327-the_good_person.xml
+++ b/translations/kangyur/translations/072-027_toh327-the_good_person.xml
@@ -32,7 +32,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-027-173">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -40,7 +40,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -197,6 +197,12 @@
                 </change>
                 <change who="#andre" when="2024-09-14T20:02:50.549Z" type="text-version" status="1.0.2" xml:id="UT22084-072-027-178">
                     <desc>Glossary integration revised - Activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2024-10-25T14:14:14.651Z" type="translation-status" status="1" xml:id="UT22084-072-027-179">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-10-25T14:14:14.651Z" type="text-version" status="1.0.3" xml:id="UT22084-072-027-180">
+                    <desc>Included in App v 3.18</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
