--- a/translations/kangyur/translations/062-019_toh219-putting_an_end_to_karmic_obscurations.xml
+++ b/translations/kangyur/translations/062-019_toh219-putting_an_end_to_karmic_obscurations.xml
@@ -31,14 +31,14 @@
                 <editor role="copyEditor" xml:id="UT22084-062-019-433">Tracy Davis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.4 <date>2024</date>
+                <edition>v 1.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit initiative to translate all the Buddha’s
                     words into modern languages, and to make them available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND (Attribution - Non-commercial -
@@ -165,6 +165,12 @@
                 </change>
                 <change who="#martina-cotter" when="2024-10-15T17:01:51.648Z" type="text-version" status="1.0.4" xml:id="UT22084-062-019-442">
                     <desc>activated pending links</desc>
+                </change>
+                <change who="#sameer" when="2024-10-25T15:07:39.309Z" type="translation-status" status="1" xml:id="UT22084-062-019-443">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-10-25T15:07:39.309Z" type="text-version" status="1.0.5" xml:id="UT22084-062-019-444">
+                    <desc>Included in App v 3.19</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
