--- a/translations/kangyur/translations/090-001_toh557-the_sutra_of_the_sublime_golden_light_3.xml
+++ b/translations/kangyur/translations/090-001_toh557-the_sutra_of_the_sublime_golden_light_3.xml
@@ -37,14 +37,14 @@
                 <sponsor xml:id="UT22084-090-001-6">May Gu, Likai Gu and Tiffany Tai, Lillian Gu and Jerry Yen, and dedicated to George Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.4 <date>2024</date>
+                <edition>v 1.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit initiative to translate all the Buddha’s
                     words into modern languages, and to make them available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND (Attribution - Non-commercial -
@@ -156,6 +156,12 @@
                 </change>
                 <change who="#andre" when="2024-10-23T10:13:41.363Z" type="text-version" status="1.0.4" xml:id="UT22084-090-001-2041">
                     <desc>Glossary matching revised, activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2024-10-25T15:31:15.372Z" type="translation-status" status="1" xml:id="UT22084-090-001-2042">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-10-25T15:31:15.372Z" type="text-version" status="1.0.5" xml:id="UT22084-090-001-2043">
+                    <desc>Included in App v 3.19</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
