--- a/translations/kangyur/placeholders/083-015_toh467-the_tantra_of_black_yamari.xml
+++ b/translations/kangyur/placeholders/083-015_toh467-the_tantra_of_black_yamari.xml
@@ -12,14 +12,15 @@
                 <author role="translatorMain" xml:id="UT22084-083-015-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-083-015-2">Bruno Galasek-Hul</author>
                 <editor role="projectEditor" xml:id="UT22084-083-015-18">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-083-015-27">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-083-015"/>
                 <date/>
             </publicationStmt>
@@ -88,6 +89,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-05T13:01:56.087Z" type="text-version" status="0.0.11" xml:id="UT22084-083-015-23">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T13:02:34.222Z" type="text-version" status="0.0.12" xml:id="UT22084-083-015-28">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-28T13:20:09.525Z" type="translation-status" status="2.d" xml:id="UT22084-083-015-29">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-28T13:20:09.525Z" type="text-version" status="0.0.13" xml:id="UT22084-083-015-30">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
