--- a/translations/kangyur/placeholders/077-001_toh360-reciting_the_names_of_manjusri.xml
+++ b/translations/kangyur/placeholders/077-001_toh360-reciting_the_names_of_manjusri.xml
@@ -20,11 +20,11 @@
                 <sponsor xml:id="UT22084-077-001-10">May and George Gu</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.12 <date>2023</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-077-001"/>
                 <date/>
             </publicationStmt>
@@ -88,6 +88,12 @@
                 </change>
                 <change who="#line-tofte" when="2023-10-12T07:31:39.879Z" type="text-version" status="0.0.12" xml:id="UT22084-077-001-26">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-29T12:15:11.31Z" type="translation-status" status="2.h" xml:id="UT22084-077-001-27">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-29T12:15:11.31Z" type="text-version" status="0.0.13" xml:id="UT22084-077-001-28">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
