--- a/translations/kangyur/placeholders/003-008_toh1-13-chapter_13_on_demotions.xml
+++ b/translations/kangyur/placeholders/003-008_toh1-13-chapter_13_on_demotions.xml
@@ -4,14 +4,14 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">Chapter 13: On Demotions</title>
+                <title type="mainTitle" xml:lang="en">Chapter 13: On Penitents</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Pārivāsikavastu</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">spo ba'i gzhi/</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">spo ba’i gzhi/</title>
                 <author role="translatorMain" xml:id="UT22084-003-008-1"/>
                 <author role="translatorEng" xml:id="UT22084-003-008-2">Ven. Gyalten Jigdrel</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -61,6 +61,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-09-05T14:58:01.019Z" type="text-version" status="0.0.7" xml:id="UT22084-003-008-12">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#john" when="2024-10-29T19:31:01.435Z" type="text-version" status="0.0.8" xml:id="UT22084-003-008-13">
+                    <desc>Changed title to reflect Bob Miller's choice in Toh 1-4.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
