--- a/translations/kangyur/placeholders/094-017_toh740,1005-the_sutra_of_mahalaksmi.xml
+++ b/translations/kangyur/placeholders/094-017_toh740,1005-the_sutra_of_mahalaksmi.xml
@@ -15,13 +15,14 @@
                 <author role="translatorEng" xml:id="UT22084-094-017-10">Péter-Dániel Szántó</author>
                 <consultant role="projectManager" xml:id="UT22084-094-017-11">Péter-Dániel Szántó</consultant>
                 <editor role="projectEditor" xml:id="UT22084-094-017-25">Andreas Doctor</editor>
+                <editor role="copyEditor" xml:id="UT22084-094-017-34">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-094-017"/>
             </publicationStmt>
             <sourceDesc>
@@ -99,6 +100,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-04T09:27:52.262Z" type="text-version" status="0.0.6" xml:id="UT22084-094-017-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T09:28:29.183Z" type="text-version" status="0.0.7" xml:id="UT22084-094-017-35">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-30T13:31:59.402Z" type="translation-status" status="2.a" xml:id="UT22084-094-017-36">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-30T13:31:59.402Z" type="text-version" status="0.0.8" xml:id="UT22084-094-017-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
