--- a/translations/kangyur/translations/001-004_toh1-4-chapter_4_on_the_rains.xml
+++ b/translations/kangyur/translations/001-004_toh1-4-chapter_4_on_the_rains.xml
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-001-004-608">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -148,6 +148,9 @@
                 </change>
                 <change who="#john" when="2024-10-30T18:33:48.326Z" type="text-version" status="1.0.0" xml:id="UT22084-001-004-5483">
                     <desc>Completed final review and extensive editing.</desc>
+                </change>
+                <change who="#john" when="2024-10-30T18:38:14.044Z" type="text-version" status="1.0.1" xml:id="UT22084-001-004-5484">
+                    <desc>User set version to 1.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
