--- a/translations/kangyur/translations/001-002_toh1-2-chapter_2_on_the_restoration_site.xml
+++ b/translations/kangyur/translations/001-002_toh1-2-chapter_2_on_the_restoration_site.xml
@@ -29,7 +29,7 @@
                 <sponsor xml:id="UT22084-001-002-17987">Dakki</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.5 <date>2024</date>
+                <edition>v 1.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -47,7 +47,7 @@
                 <idno xml:id="UT22084-001-002"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means that these ids diverge slightly from the standard
                     logic.</note>
-                <date>2024-07-16</date>
+                <date>2024-10-31</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1-2" type="chapter">
@@ -178,6 +178,9 @@
                 </change>
                 <change who="#john" when="2024-10-30T18:41:35.186Z" type="text-version" status="1.0.5" xml:id="UT22084-001-002-17992">
                     <desc>A few further edits and corrections.</desc>
+                </change>
+                <change who="#sameer" when="2024-10-31T07:28:59.284Z" type="text-version" status="1.0.6" xml:id="UT22084-001-002-17993">
+                    <desc>First published version.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
