--- a/translations/kangyur/translations/001-004_toh1-4-chapter_4_on_the_rains.xml
+++ b/translations/kangyur/translations/001-004_toh1-4-chapter_4_on_the_rains.xml
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-001-004-608">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -45,7 +45,7 @@
                     </licence>
                 </availability>
                 <idno xml:id="UT22084-001-004"/>
-                <date>2024-10-30</date>
+                <date>2024-10-31</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1-4" type="chapter">
@@ -151,6 +151,9 @@
                 </change>
                 <change who="#john" when="2024-10-30T18:38:14.044Z" type="text-version" status="1.0.1" xml:id="UT22084-001-004-5484">
                     <desc>User set version to 1.0.1</desc>
+                </change>
+                <change who="#sameer" when="2024-10-31T07:42:04.835Z" type="text-version" status="1.0.2" xml:id="UT22084-001-004-5485">
+                    <desc>First published version.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
