--- a/translations/kangyur/placeholders/065-005_toh242-the_sutra_of_the_wheel_of_dedication.xml
+++ b/translations/kangyur/placeholders/065-005_toh242-the_sutra_of_the_wheel_of_dedication.xml
@@ -4,14 +4,14 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">yongs su bsngo ba'i 'khor lo'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Pariṇatacakrasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Wheel of Dedication</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yongs su bsngo ba'i 'khor lo zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Pariṇatacakrasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">yongs su bsngo ba'i 'khor lo'i mdo/</title>
+                <title type="otherTitle" xml:lang="en">[Note: the content is almost the same as Toh 809, see Saerji ARIRIAB-14.]</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Pariṇatacakranāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pariṇāmacakrasūtra</title>
-                <title type="otherTitle" xml:lang="en">[Note: the content is almost the same as Toh 809, see Saerji ARIRIAB-14.]</title>
-                <author role="translatorMain" xml:id="UT22084-065-005-1"/>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yongs su bsngo ba'i 'khor lo zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" xml:id="UT22084-065-005-1">Bodhicharya Translation Group</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-065-005-2">Ringu Tulku Rinpoche</consultant>
                 <consultant role="projectManager" xml:id="UT22084-065-005-3">Lama Karma Wangmo</consultant>
                 <author role="translatorEng" xml:id="UT22084-065-005-4">Ringu Tulku Rinpoche</author>
@@ -20,13 +20,14 @@
                 <consultant role="advisor" xml:id="UT22084-065-005-7">L.S. Summer</consultant>
                 <consultant role="advisor" xml:id="UT22084-065-005-8">Zhujun Ma</consultant>
                 <editor role="reviser" xml:id="UT22084-065-005-9">Joshua Shelton</editor>
+                <editor role="projectEditor" xml:id="UT22084-065-005-32">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-065-005"/>
                 <date/>
             </publicationStmt>
@@ -76,6 +77,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-22T10:12:39.8Z" type="text-version" status="0.0.7" xml:id="UT22084-065-005-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-22T10:14:07.773Z" type="text-version" status="0.0.8" xml:id="UT22084-065-005-33">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-31T09:58:22.982Z" type="translation-status" status="2.f" xml:id="UT22084-065-005-34">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-31T09:58:22.982Z" type="text-version" status="0.0.9" xml:id="UT22084-065-005-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
