--- a/translations/kangyur/placeholders/093-021_toh706-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-021_toh706-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -11,15 +11,16 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug gi mtshan brgya rtsa brgyad pa zhes bya ba/</title>
                 <author role="translatorMain" xml:id="UT22084-093-021-8">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-093-021-9">Catherine Dalton</author>
-                <editor role="reviser" xml:id="UT22084-093-021-17">Torsten Gerloff</editor>
+                <editor role="projectEditor" xml:id="UT22084-093-021-17">Torsten Gerloff</editor>
                 <editor role="copyEditor" xml:id="UT22084-093-021-28">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-093-021-36">Nathaniel Rich</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-093-021"/>
                 <date/>
             </publicationStmt>
@@ -100,6 +101,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-14T13:33:23.119Z" type="text-version" status="0.0.13" xml:id="UT22084-093-021-31">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-24T09:28:48.132Z" type="text-version" status="0.0.14" xml:id="UT22084-093-021-37">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-31T15:53:19.438Z" type="translation-status" status="2.b" xml:id="UT22084-093-021-38">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-31T15:53:19.438Z" type="text-version" status="0.0.15" xml:id="UT22084-093-021-39">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
